[package]
name = "rusthelp"
version = "0.1.0"
authors = ["Maximilian Siling <mouse-art@ya.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.10"
log = "0.4.11"
once_cell = "1.5.2"
pretty_env_logger = "0.4.0"
reqwest = "0.10.10"
rusty_v8 = "0.15.0"
select = "0.5.0"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
serde_repr = "0.1.6"
serde_tuple = "0.5.0"
tokio = { version = "0.2.5", features = ["full"] }
